--- a/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
+++ b/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
@@ -7,49 +7,56 @@
     <div class="card mb-4">
         <div class="card-header">
             <h4 class="float-left">Client Master</h4>
-            <button class="btn btn-search btn-primary float-right d-sm-none"
-                (click)="toggleSearch()"><i class="icon-search"></i></button>
                 <button class="btn  btn-primary float-right" (click)="addClientPopup(null)">Add Customer</button>
         </div>
         <div class="card-body">
             <!--table listing statrt hover-->
-            <div >
+            <div id="no-more-tables">
                 <!-- This id used for responsive table -->
 
-              <table datatable [dtOptions]="dtOptions" class="row-border hover">
+              <table datatable [dtOptions]="dtOptions" class="table row-border hover">
                 <thead>
                   <tr>
-                    <th>Client Id</th>
-                    <th>Title</th>
-                    <th>Customer Name</th>
-                    <th>Company Name</th>
-                    <th>Mobile No</th>
-                    <th>Tel No.</th>
-                    <th>Action</th>
+                    <th style="width: 15%;">Client Id</th>
+                    <th style="width: 10%;">Title</th>
+                    <th style="width: 20%;">Customer Name</th>
+                    <th style="width: 15%;">Company Name</th>
+                    <th style="width: 15%;">Mobile #</th>
+                    <th style="width: 15%;">Tel #</th>
+                    <th style="width: 10%;" class="text-center actions-td cursor">Action</th>
                   </tr>
                 </thead>
                 <tbody *ngIf="customers?.length != 0">
                   <tr *ngFor="let customer of customers">
-                      <td>{{ customer.clientId }}</td>
-                      <td>{{ customer.clientTitleId==1?"Mr":"Ms" }}</td>
-                      <td>{{ customer.clientName }}</td>
-                      <td>{{ customer.companyName }}</td>
-                      <td>{{ customer.ownerMobileNo }}</td>
-                      <td>{{ customer.telNoFirst }}</td>
-                      <td data-title="Actions" >
+                      <td data-title="Client Id">{{ customer.clientId }}</td>
+                      <td data-title="Title">{{ customer.clientTitleId==1?"Mr":"Ms" }}</td>
+                      <td data-title="Client Name">{{ customer.clientName }}</td>
+                      <td data-title="Company Name">{{ customer.companyName }}</td>
+                      <td data-title="Mobile #">{{ customer.ownerMobileNo }}</td>
+                      <td data-title="Tel #">{{ customer.telNoFirst }}</td>
+
+                      <td data-title="Actions" class="action text-center actions-td">
+                        <div class="d-flex justify-content-center">
+                            <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
+                                    ngbTooltip="View/Edit" (click)="addClientPopup(customer)"></i></a>
+                            <a href="javascript:void(0)">
+                                <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="openDelete(content,customer)"></i></a>
+                        </div>
+                    </td>
+                      
+                      <!-- <td data-title="Actions" >
                         <div>
                             <button class="btn  btn-secondary float-right"  ngbTooltip="Edit" (click)="addClientPopup(customer)">Edit</button>
                             <button class="btn  btn-danger float-right" ngbTooltip="Delete" (click)="openDelete(content,customer)">Delete</button></div>
-                        </td>
+                        </td> -->
 
 
                   </tr>
+                  <tr *ngIf="customers?.length == 0">
+                    <td colspan="12" class="no-data-available">No data!</td>
+                  </tr>
                 </tbody>
-                <tbody *ngIf="customers?.length == 0">
-                <tr>
-                  <td colspan="3" class="no-data-available">No data!</td>
-                </tr>
-                <tbody>
+             
               </table>
                 <!--table listing end-->
             </div>
