--- a/ClientApp/src/app/modules/users/users-list/users-list.component.html
+++ b/ClientApp/src/app/modules/users/users-list/users-list.component.html
@@ -7,39 +7,30 @@
   <div class="card mb-4">
     <div class="card-header">
       <h4 class="float-left">Users</h4>
-      <button class="btn btn-search btn-primary float-right d-sm-none"
-              (click)="toggleSearch()">
-        <i class="icon-search"></i>
-      </button>
+    
       <button class="btn  btn-primary float-right" (click)="openUserPopup(contentUserPopup,0)">Add User</button>
     </div>
     <div class="card-body">
       <!--table listing statrt hover-->
       <div id="no-more-tables">
         <!-- This id used for responsive table -->
-        <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+        <table class="table row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
           <thead>
             <tr>
               <th scope="col" style="width:15%" class="cursor">
                 <div class="d-flex align-items-center">
-                  <span>First Name</span> <span>
-                    &#9660;
-                  </span>
+                  <span>First Name</span> 
                 </div>
               </th>
               <th scope="col" style="width:15%" class="cursor">
                 <div class="d-flex align-items-center">
-                  <span>Last Name</span> <span>
-                    &#9660;
-                  </span>
+                  <span>Last Name</span> 
                 </div>
               </th>
 
               <th scope="col" style="width:25%" class="cursor">
                 <div class="d-flex align-items-center">
-                  <span> Email</span> <span>
-                    &#9660;
-                  </span>
+                  <span> Email</span> 
                 </div>
               </th>
               <th scope="col" style="width:15%">
@@ -64,11 +55,11 @@
               <td data-title="Actions" class="action text-center actions-td">
                 <div class="d-flex justify-content-center">
                   <a href="javascript:void(0)">
-                    <i class="fas fa-user-edit orange" placement="top"
-                       ngbTooltip="View" (click)="openUserPopup(contentUserPopup, user.userId)"></i>
+                    <i class="far fa-edit orange" placement="top"
+                       ngbTooltip="View/Edit" (click)="openUserPopup(contentUserPopup, user.userId)"></i>
                   </a>
                   <a href="javascript:void(0)">
-                    <i class="fas fa-trash orange" placement="top" ngbTooltip="Delete" (click)="open(content,user.userId)"></i>
+                    <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content,user.userId)"></i>
                   </a>
                 </div>
               </td>
@@ -183,13 +174,12 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group">
-            <label for="permissions">Access rights</label>
-            
+      <div class="row access-rights-checkbox">
+        <div class="col-12">
+          <h5 class="mb-3"> Access Rights</h5>
+          <div class="form-group d-flex flex-wrap">
             <input type="hidden" name="permissions" formControlName="permissions" [(ngModel)]="modulePermission">
-            <div *ngFor="let role of modulePermission">
+            <div *ngFor="let role of modulePermission" class="checkbox">
               <input type="checkbox"
                      [value]="role.isChecked"
                      [checked]="role.isChecked"
