Customer issue resolved

--- a/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
+++ b/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
@@ -14,7 +14,7 @@
             <div id="no-more-tables">
                 <!-- This id used for responsive table -->
 
-              <table datatable [dtOptions]="dtOptions" class="table row-border hover">
+              <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
                 <thead>
                   <tr>
                     <th style="width: 15%;">Client Id</th>
@@ -40,10 +40,11 @@
                             <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
                                     ngbTooltip="View/Edit" (click)="addClientPopup(customer)"></i></a>
                             <a href="javascript:void(0)">
-                                <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="openDelete(content,customer)"></i></a>
+                                <i class="far fa-trash-alt orange" placement="top"
+                                 ngbTooltip="Delete" (click)="openDelete(content,customer)"></i></a>
                         </div>
                     </td>
-                      
+
                       <!-- <td data-title="Actions" >
                         <div>
                             <button class="btn  btn-secondary float-right"  ngbTooltip="Edit" (click)="addClientPopup(customer)">Edit</button>
@@ -53,10 +54,10 @@
 
                   </tr>
                   <tr *ngIf="customers?.length == 0">
-                    <td colspan="12" class="no-data-available">No data!</td>
+                    <td colspan="12" class="no-data-available">No Records Found!</td>
                   </tr>
                 </tbody>
-             
+
               </table>
                 <!--table listing end-->
             </div>
@@ -64,10 +65,7 @@
     </div>
 </div>
 
-<!-- Ng modal window -->
-<ng-template #clientPopup let-modal>
 
-</ng-template>
 
 
 <ng-template #content let-modal>
@@ -78,7 +76,7 @@
         <p class="text-center">Are you sure, you want to delete?</p>
     </div>
     <div class="modal-footer no-top-border">
-        <button class="btn btn-primary" (click)="modal.close(true)">OK</button>
-        <button class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="modal.close(true)">OK</button>
+        <button type="button" class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
     </div>
 </ng-template>
