--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -11,13 +11,18 @@
     <!--page main content div start here-->
     <div class="page-container">
         <div class="main-content">
+
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" [fullScreen] = "true" type="ball-spin-clockwise">
+    <p style="color: white">Please Wait. </p>
+    </ngx-spinner>
+
             <router-outlet></router-outlet>
 
-<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
-  <p style="color: white">Please Wait. </p>
-  </ngx-spinner>
+
         </div>
     </div>
+
+
     <!--page main content div end here-->
 
 </div>
