--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -83,8 +83,8 @@
             <div class="collapse" id="ui-list" [ngbCollapse]="!uiBasicCollapsedIn" [ngClass]="{ 'show': isShown }">
               <ul class="nav flex-column sub-menu" [routerLinkActive]="['in']">
                 <li class="nav-item">
-                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/inward-master"
-                    routerLinkActive="active" #inwardMaster="routerLinkActive"><i class="fas fa-circle"></i> Inward Master</a>
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/inward"
+                    routerLinkActive="active" #inward="routerLinkActive"><i class="fas fa-circle"></i> Inward</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/material-type"
