--- a/ClientApp/src/assets/scss/_variables.scss
+++ b/ClientApp/src/assets/scss/_variables.scss
@@ -40,7 +40,7 @@ $grey:          #e8e8e8;
 $light-grey:    #f2f3f8;
 $dark-grey:     #222222;
 $green:         #5cb85c;
-$dark-blue:     #FF4081;
+$pink:     #FF4081;
 $black-blue:    #1c0f3a;
 $blue:          #7d64f6;
 $white:         #ffffff;
