--- a/ClientApp/src/assets/scss/components/_buttons.scss
+++ b/ClientApp/src/assets/scss/components/_buttons.scss
@@ -93,7 +93,7 @@ footer {
         height: 0;
     }
     input:checked+.slider {
-        background-color: $dark-blue;
+        background-color: $pink;
     }
     input:focus+.slider {
         box-shadow: none;
