--- a/ClientApp/src/assets/scss/components/_tables.scss
+++ b/ClientApp/src/assets/scss/components/_tables.scss
@@ -104,7 +104,7 @@ z-index: 1050;
 					i {
                         font-size:$font18;
 						margin: 0;
-						color:$dark-blue;
+						color:$pink;
 						cursor: pointer;
 						&.disabled {
 							color:$disabled;
