--- a/ClientApp/src/assets/scss/components/_modal.scss
+++ b/ClientApp/src/assets/scss/components/_modal.scss
@@ -41,7 +41,7 @@
         padding: 0.7rem 1rem;
         border-color: $light-grey;
         i {
-            color: $orange;
+            color: $pink;
             margin-right: 0.3125rem;
         }
         .modal-title {
